Интегрирован IClearContainer - fixes

--- a/src/main/resources/configs/config.yml
+++ b/src/main/resources/configs/config.yml
@@ -46,16 +46,16 @@ parameters:
                     method: "POST",
 
                 },
-                {
-                    #наименование конкретного сервера опционально - без него конфиг будет применен ко всем серверам указанного класса
-                    #serverName: "cont",
-                    #класс сервера опционален - без него конфиг будет применен к серверу c указанным наименованием
-                    serverClass: "Data.DataServer.Servers.ContDataServer",
-                    title: "Выполнение заказчика",
-                    modelUrl: "bdr_customer",
-                    dataUrl: "",
-                    optionsUrl: "",
-                    method: "POST",
-
-                },
+#                {
+#                    #наименование конкретного сервера опционально - без него конфиг будет применен ко всем серверам указанного класса
+#                    #serverName: "cont",
+#                    #класс сервера опционален - без него конфиг будет применен к серверу c указанным наименованием
+#                    serverClass: "Data.DataServer.Servers.ContDataServer",
+#                    title: "Выполнение заказчика",
+#                    modelUrl: "bdr_customer",
+#                    dataUrl: "",
+#                    optionsUrl: "",
+#                    method: "POST",
+#
+#                },
             ]
